Added loading of the Tera Connectionlog Format used by Gothos Dmgmeter

--- a/PacketViewer/Forms/MainWindow.xaml
+++ b/PacketViewer/Forms/MainWindow.xaml
@@ -18,7 +18,11 @@
         </Popup>
 
         <Menu Height="24" VerticalAlignment="Top" Grid.ColumnSpan="2">
-            <MenuItem Name="MacrosMenuItem" Header="Misc" >
+            <MenuItem Header="Open Log">
+                <MenuItem x:Name="openTeraLog" Header="Open Tera Connection Log" Click="openTeraLog_Click"/>
+                <MenuItem x:Name="openWSLog" Header="Open Wireshack Log" IsEnabled="False"/>
+            </MenuItem>
+            <MenuItem x:Name="MacrosMenuItem" Header="Misc" >
                 <MenuItem Header="Max Packets to Show:"/>
                 <TextBox x:Name="boxMaxPackets" Text="250" TextChanged="boxMaxPackets_TextChanged"/>
             </MenuItem>
