--- a/PacketViewer/Forms/MainWindow.xaml
+++ b/PacketViewer/Forms/MainWindow.xaml
@@ -1,33 +1,27 @@
-﻿<Window x:Class="PacketViewer.Forms.MainWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="PacketSniffer -- Base by Cerium Unity -- Edit by GoneUp" Height="648" Width="898" Closed="Window_Closed"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="PacketViewer.Forms.MainWindow"
+        Title="PacketSniffer -- Base by Cerium Unity -- Edit by GoneUp" Height="695" Width="903" Closed="Window_Closed"
         Icon="../icon.ico">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="257*"/>
-            <ColumnDefinition Width="633*"/>
+            <ColumnDefinition Width="193"/>
+            <ColumnDefinition/>
+            <ColumnDefinition Width="224"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="56"/>
+            <RowDefinition Height="27"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
 
-        <Popup Name="myPopup" Margin="0,0,0,3">
-            <TextBlock Name="myPopupText" Background="LightBlue"  Foreground="Blue"> Popup Text</TextBlock>
-        </Popup>
-
-        <Menu Height="24" VerticalAlignment="Top" Grid.ColumnSpan="2">
+        <Menu Height="24" VerticalAlignment="Top" Grid.ColumnSpan="3">
             <MenuItem Header="Open Log">
                 <MenuItem x:Name="openTeraLog" Header="Open Log" Click="openTeraLog_Click"/>
             </MenuItem>
-            <MenuItem x:Name="MacrosMenuItem" Header="Misc" >
-                <MenuItem Header="Max Packets to Show:"/>
-                <TextBox x:Name="boxMaxPackets" Text="250" TextChanged="boxMaxPackets_TextChanged"/>
-            </MenuItem>
         </Menu>
 
-        <ListBox Name="PacketsList" Margin="10,93,0,38" Grid.Row="1" Grid.Column="0" SelectionChanged="OnPacketSelect">
+        <ListBox x:Name="boxPackets" Margin="0" Grid.Row="1" SelectionChanged="OnPacketSelect" HorizontalAlignment="Left" VerticalAlignment="Top" Width="193" Height="628">
             <ListBox.ItemContainerStyle>
                 <Style TargetType="{x:Type ListBoxItem}">
                     <Setter Property="HorizontalContentAlignment" Value="Left"/>
@@ -36,42 +30,66 @@
             </ListBox.ItemContainerStyle>
         </ListBox>
 
-        <RichTextBox Name="TextBox" Grid.Column="1" Margin="10,93,10,10" Grid.Row="1" VerticalScrollBarVisibility="Visible" />
-        <RichTextBox Name="HexTextBox" Grid.Column="1" Margin="10,10,10,0" Grid.Row="1" VerticalScrollBarVisibility="Visible" Height="76" VerticalAlignment="Top" />
+        <RichTextBox x:Name="boxPacketInfo" Grid.Column="1" Margin="0,0,0,10" Grid.Row="1" VerticalScrollBarVisibility="Visible" />
+        <Grid Grid.Column="2" HorizontalAlignment="Left" Height="630" Margin="3,2,0,0" Grid.Row="1" VerticalAlignment="Top" Width="212" >
+            <Grid.ColumnDefinitions>
 
-        <ComboBox Name="PacketNamesList" Margin="10,10,34,0" Grid.Row="1" Height="22" VerticalAlignment="Top"/>
-        <Button Content=">" Margin="0,10,0,0" Grid.Row="1" VerticalAlignment="Top" Click="FindByName" HorizontalAlignment="Right" Width="29" Height="22"/>
+                <ColumnDefinition Width="199*"/>
 
-        <TextBox Name="HexBox" Margin="10,37,34,0" Grid.Row="1" TextWrapping="Wrap" Text="Find Hex" VerticalAlignment="Top" Height="22"/>
-        <Button Content=">" Margin="0,37,0,0" Grid.Row="1" VerticalAlignment="Top" HorizontalAlignment="Right" Width="29" Click="FindByHex" Height="22"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="199*"/>
+                <RowDefinition Height="206*"/>
 
-        <TextBox Name="OpCodeBox" Margin="10,64,34,0" Grid.Row="1" TextWrapping="Wrap" Text="Find OpCode" VerticalAlignment="Top" Height="22"/>
-        <Button Content=">" Margin="0,64,0,0" Grid.Row="1" VerticalAlignment="Top" HorizontalAlignment="Right" Width="29" Click="FindByOpCode" Height="22"/>
-        <ComboBox x:Name="BoxNic" Margin="5,24,10,0" VerticalAlignment="Top"
-                  Grid.Row="0" Grid.Column="1" SelectionChanged="BoxNic_SelectionChanged" Height="22"/>
-        <ComboBox Grid.Row="0" Grid.Column="0" x:Name="BoxServers" HorizontalAlignment="Left" Margin="10,24,0,0" VerticalAlignment="Top" Width="182" Height="22">
-            <ComboBoxItem Content="79.110.94.217;EU Akasha"/>
-            <ComboBoxItem Content="79.110.94.218;EU Arcadia"/>
-            <ComboBoxItem Content="79.110.94.214;EU Elinu"/>
-            <ComboBoxItem Content="79.110.94.212;EU Fraya"/>
-            <ComboBoxItem Content="79.110.94.213;EU Hasmina" IsSelected="True"/>
-            <ComboBoxItem Content="79.110.94.215;EU Icaruna"/>
-            <ComboBoxItem Content="79.110.94.219;EU Kaidun"/>
-            <ComboBoxItem Content="79.110.94.211;EU Killian"/>
-            <ComboBoxItem Content="79.110.94.216;EU Veritas"/>
-            <ComboBoxItem Content="79.110.94.218;EU Zenobia"/>
-            <ComboBoxItem Content="119.205.255.119;KR Arun"/>
-            <ComboBoxItem Content="119.205.255.118;KR Bellick"/>
-            <ComboBoxItem Content="119.205.255.106;KR Mystelle"/>
-            <ComboBoxItem Content="208.67.49.28;NA Tempest Reach"/>
-            <ComboBoxItem Content="208.67.49.92;NA Mount Tyrannas"/>
-            <ComboBoxItem Content="208.67.49.100;NA Valley of Titans"/>
-            <ComboBoxItem Content="208.67.49.84;NA Ascension Valley"/>
-            <ComboBoxItem Content="208.67.49.52;NA Lake of Tears"/>
-            <ComboBoxItem Content="208.67.49.68;NA Celestial Hills"/>
-        </ComboBox>
-        <CheckBox x:Name="boxAutoScroll" Content="AutoScroll" Margin="10,0,161,10" Grid.Row="2" Width="73" IsChecked="True" VerticalAlignment="Bottom"/>
-        <CheckBox x:Name="boxCapture" Content="Capture" Margin="101,0,83,11" Grid.Row="1" Width="73" IsChecked="True"  VerticalAlignment="Bottom"/>
-        <Button x:Name="btnClearCapture" Content="Clear Log" Margin="0,0,2,10" Grid.Row="2" FontSize="8" Click="btnClearCapture_Click" FontWeight="Bold" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="81"/>
+                <RowDefinition Height="225*"/>
+            </Grid.RowDefinitions>
+            <GroupBox Header="General" HorizontalAlignment="Left" Width="222" Grid.Row="1" Margin="-10,201,0,5" Grid.RowSpan="2"/>
+            <CheckBox x:Name="boxSC" Content="Server -&gt; Client" Margin="7,106,0,0" Grid.Row="2" IsChecked="True"  VerticalAlignment="Top" Height="16" RenderTransformOrigin="7.58,-2.5" HorizontalAlignment="Left" Width="100"/>
+
+            <CheckBox x:Name="boxCS" Content="Client -&gt; Server" Margin="7,127,0,82" Grid.Row="2" IsChecked="True"  VerticalAlignment="Center" Height="16" RenderTransformOrigin="7.58,-2.5" HorizontalAlignment="Left" Width="100"/>
+            <CheckBox x:Name="boxCapture" Content="Show new Packets" Grid.Row="2" IsChecked="True"  VerticalAlignment="Top" Height="18" HorizontalAlignment="Left" Width="125" Margin="7,169,0,0"/>
+            <CheckBox x:Name="boxAutoScroll" Content="AutoScroll" Margin="7,148,0,0" Grid.Row="2" IsChecked="True" VerticalAlignment="Top" Height="16" HorizontalAlignment="Left" Width="72"/>
+            <GroupBox Header="Ignore Opcodes" HorizontalAlignment="Left" Margin="5,5,0,0" VerticalAlignment="Top" Height="185" Width="207" Grid.ColumnSpan="2"/>
+            <GroupBox Header="Show only Opcodes                       " HorizontalAlignment="Left"
+        		VerticalAlignment="Top" Height="201" Width="212" Grid.Row="1" Grid.ColumnSpan="2"/>
+            <ListBox x:Name="boxIgnoreOpcodes" HorizontalAlignment="Left" Height="122" Margin="92,60,0,0" VerticalAlignment="Top" Width="110"/>
+            <Button x:Name="btnIgnoreRemove" Content="Remove" HorizontalAlignment="Left" Margin="10,62,0,0" VerticalAlignment="Top" Width="65" Height="22" Grid.ColumnSpan="2"/>
+            <Button x:Name="btnIgnoreRemoveAll" Content="Remove all" HorizontalAlignment="Left" Margin="10,163,0,0" VerticalAlignment="Top" Width="65" Height="22" Grid.ColumnSpan="2"/>
+            <Label Content="Opcode" HorizontalAlignment="Left" Margin="5,31,0,0" VerticalAlignment="Top" Height="26" Width="52" Grid.ColumnSpan="2"/>
+            <TextBox x:Name="boxIgnoreOpcode" HorizontalAlignment="Left" Height="23" Margin="67,37,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="60" Grid.Column="1"/>
+            <Button x:Name="btnIgnoreAdd" Content="Add" HorizontalAlignment="Left" Margin="133,31,0,0" VerticalAlignment="Top" Width="45" Height="22" Grid.Column="1"/>
+            <ListBox x:Name="boxShowOpcodes" HorizontalAlignment="Left" Height="122" Margin="92,67,0,0" VerticalAlignment="Top" Width="110" Grid.Row="1"/>
+            <Button x:Name="btnShowRemove" Content="Remove" HorizontalAlignment="Left" Margin="10,65,0,0" VerticalAlignment="Top" Width="65" Height="22" Grid.Row="1" Grid.ColumnSpan="2"/>
+            <Button x:Name="btnShowRemoveAll" Content="Remove all" HorizontalAlignment="Left" Margin="10,165,0,0" VerticalAlignment="Top" Width="65" Height="22" Grid.Row="1"/>
+            <Label Content="Opcode" HorizontalAlignment="Left" Margin="5,34,0,0" VerticalAlignment="Top" Grid.Row="1" Height="26" Width="52" Grid.ColumnSpan="2"/>
+            <TextBox x:Name="boxShowOpcode" HorizontalAlignment="Left" Height="23" Margin="67,40,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="60" Grid.Row="1" Grid.Column="1"/>
+            <Button x:Name="btnShowAdd" Content="Add" HorizontalAlignment="Left" Margin="132,40,0,0" VerticalAlignment="Top" Width="45" Height="22" Grid.Row="1" Grid.Column="1"/>
+            <Label Content="Max Packets" HorizontalAlignment="Left" Margin="7,77,0,0" Grid.Row="2" VerticalAlignment="Top" Height="26" Width="75"/>
+            <TextBox x:Name="boxMaxPackets" HorizontalAlignment="Left" Height="23" Margin="92,77,0,0" Grid.Row="2" TextWrapping="Wrap" Text="200" VerticalAlignment="Top" Width="40" TextChanged="boxMaxPackets_TextChanged"/>
+            <Button x:Name="btnClearCapture" Content="Clear Log" Margin="7,187,0,0" Grid.Row="2" Click="btnClearCapture_Click" VerticalAlignment="Top" HorizontalAlignment="Left" Width="170" Height="23"/>
+            <ComboBox x:Name="boxServers" HorizontalAlignment="Left" VerticalAlignment="Top" Width="195" Height="25" Margin="7,19,0,0" Grid.Row="2">
+                <ComboBoxItem Content="79.110.94.217;EU Akasha"/>
+                <ComboBoxItem Content="79.110.94.218;EU Arcadia"/>
+                <ComboBoxItem Content="79.110.94.214;EU Elinu"/>
+                <ComboBoxItem Content="79.110.94.212;EU Fraya"/>
+                <ComboBoxItem Content="79.110.94.213;EU Hasmina" IsSelected="True"/>
+                <ComboBoxItem Content="79.110.94.215;EU Icaruna"/>
+                <ComboBoxItem Content="79.110.94.219;EU Kaidun"/>
+                <ComboBoxItem Content="79.110.94.211;EU Killian"/>
+                <ComboBoxItem Content="79.110.94.216;EU Veritas"/>
+                <ComboBoxItem Content="79.110.94.218;EU Zenobia"/>
+                <ComboBoxItem Content="119.205.255.119;KR Arun"/>
+                <ComboBoxItem Content="119.205.255.118;KR Bellick"/>
+                <ComboBoxItem Content="119.205.255.106;KR Mystelle"/>
+                <ComboBoxItem Content="208.67.49.28;NA Tempest Reach"/>
+                <ComboBoxItem Content="208.67.49.92;NA Mount Tyrannas"/>
+                <ComboBoxItem Content="208.67.49.100;NA Valley of Titans"/>
+                <ComboBoxItem Content="208.67.49.84;NA Ascension Valley"/>
+                <ComboBoxItem Content="208.67.49.52;NA Lake of Tears"/>
+                <ComboBoxItem Content="208.67.49.68;NA Celestial Hills"/>
+            </ComboBox>
+            <Button x:Name="btnStartStop" Content="Start" HorizontalAlignment="Left" Height="23" VerticalAlignment="Top" Width="195" Margin="7,49,0,0" Click="btnStartStop_Click" Grid.Row="2"/>
+
+        </Grid>
     </Grid>
 </Window>
