--- a/PacketViewer/Forms/MainWindow.xaml
+++ b/PacketViewer/Forms/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="PacketViewer.Forms.MainWindow"
-        Title="PacketSniffer -- Base by Cerium Unity -- Edit by GoneUp" Height="695" Width="903" Closed="Window_Closed"
+        Title="PacketSniffer 6 -- Base by Cerium Unity -- Edit by GoneUp" Height="695" Width="903" Closed="Window_Closed"
         Icon="../icon.ico">
     <Grid>
         <Grid.ColumnDefinitions>
@@ -44,26 +44,26 @@
                 <RowDefinition Height="225*"/>
             </Grid.RowDefinitions>
             <GroupBox Header="General" HorizontalAlignment="Left" Width="222" Grid.Row="1" Margin="-10,201,0,5" Grid.RowSpan="2"/>
-            <CheckBox x:Name="boxSC" Content="Server -&gt; Client" Margin="7,106,0,0" Grid.Row="2" IsChecked="True"  VerticalAlignment="Top" Height="16" RenderTransformOrigin="7.58,-2.5" HorizontalAlignment="Left" Width="100"/>
+            <CheckBox x:Name="boxSC" Content="Server -&gt; Client" Margin="7,106,0,0" Grid.Row="2" IsChecked="True"  VerticalAlignment="Top" Height="16" RenderTransformOrigin="7.58,-2.5" HorizontalAlignment="Left" Width="100" Checked="boxSC_Checked" Unchecked="boxSC_Checked"/>
 
-            <CheckBox x:Name="boxCS" Content="Client -&gt; Server" Margin="7,127,0,82" Grid.Row="2" IsChecked="True"  VerticalAlignment="Center" Height="16" RenderTransformOrigin="7.58,-2.5" HorizontalAlignment="Left" Width="100"/>
-            <CheckBox x:Name="boxCapture" Content="Show new Packets" Grid.Row="2" IsChecked="True"  VerticalAlignment="Top" Height="18" HorizontalAlignment="Left" Width="125" Margin="7,169,0,0"/>
+            <CheckBox x:Name="boxCS" Content="Client -&gt; Server" Margin="7,127,0,82" Grid.Row="2" IsChecked="True"  VerticalAlignment="Center" Height="16" RenderTransformOrigin="7.58,-2.5" HorizontalAlignment="Left" Width="100" Checked="boxCS_Checked" Unchecked="boxCS_Checked"/>
+            <CheckBox x:Name="boxCapture" Content="Show new Packets" Grid.Row="2" IsChecked="True"  VerticalAlignment="Top" Height="18" HorizontalAlignment="Left" Width="125" Margin="7,169,0,0" Checked="boxCapture_Checked" Unchecked="boxCapture_Checked"/>
             <CheckBox x:Name="boxAutoScroll" Content="AutoScroll" Margin="7,148,0,0" Grid.Row="2" IsChecked="True" VerticalAlignment="Top" Height="16" HorizontalAlignment="Left" Width="72"/>
             <GroupBox Header="Ignore Opcodes" HorizontalAlignment="Left" Margin="5,5,0,0" VerticalAlignment="Top" Height="185" Width="207" Grid.ColumnSpan="2"/>
             <GroupBox Header="Show only Opcodes                       " HorizontalAlignment="Left"
         		VerticalAlignment="Top" Height="201" Width="212" Grid.Row="1" Grid.ColumnSpan="2"/>
             <ListBox x:Name="boxIgnoreOpcodes" HorizontalAlignment="Left" Height="122" Margin="92,60,0,0" VerticalAlignment="Top" Width="110"/>
-            <Button x:Name="btnIgnoreRemove" Content="Remove" HorizontalAlignment="Left" Margin="10,62,0,0" VerticalAlignment="Top" Width="65" Height="22" Grid.ColumnSpan="2"/>
-            <Button x:Name="btnIgnoreRemoveAll" Content="Remove all" HorizontalAlignment="Left" Margin="10,163,0,0" VerticalAlignment="Top" Width="65" Height="22" Grid.ColumnSpan="2"/>
+            <Button x:Name="btnIgnoreRemove" Content="Remove" HorizontalAlignment="Left" Margin="10,62,0,0" VerticalAlignment="Top" Width="65" Height="22" Grid.ColumnSpan="2" Click="btnIgnoreRemove_Click"/>
+            <Button x:Name="btnIgnoreRemoveAll" Content="Remove all" HorizontalAlignment="Left" Margin="10,163,0,0" VerticalAlignment="Top" Width="65" Height="22" Grid.ColumnSpan="2" Click="btnIgnoreRemoveAll_Click"/>
             <Label Content="Opcode" HorizontalAlignment="Left" Margin="5,31,0,0" VerticalAlignment="Top" Height="26" Width="52" Grid.ColumnSpan="2"/>
             <TextBox x:Name="boxIgnoreOpcode" HorizontalAlignment="Left" Height="23" Margin="67,37,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="60" Grid.Column="1"/>
-            <Button x:Name="btnIgnoreAdd" Content="Add" HorizontalAlignment="Left" Margin="133,31,0,0" VerticalAlignment="Top" Width="45" Height="22" Grid.Column="1"/>
+            <Button x:Name="btnIgnoreAdd" Content="Add" HorizontalAlignment="Left" Margin="133,31,0,0" VerticalAlignment="Top" Width="45" Height="22" Grid.Column="1" Click="btnIgnoreAdd_Click"/>
             <ListBox x:Name="boxShowOpcodes" HorizontalAlignment="Left" Height="122" Margin="92,67,0,0" VerticalAlignment="Top" Width="110" Grid.Row="1"/>
-            <Button x:Name="btnShowRemove" Content="Remove" HorizontalAlignment="Left" Margin="10,65,0,0" VerticalAlignment="Top" Width="65" Height="22" Grid.Row="1" Grid.ColumnSpan="2"/>
-            <Button x:Name="btnShowRemoveAll" Content="Remove all" HorizontalAlignment="Left" Margin="10,165,0,0" VerticalAlignment="Top" Width="65" Height="22" Grid.Row="1"/>
+            <Button x:Name="btnShowRemove" Content="Remove" HorizontalAlignment="Left" Margin="10,65,0,0" VerticalAlignment="Top" Width="65" Height="22" Grid.Row="1" Grid.ColumnSpan="2" Click="btnShowRemove_Click"/>
+            <Button x:Name="btnShowRemoveAll" Content="Remove all" HorizontalAlignment="Left" Margin="10,165,0,0" VerticalAlignment="Top" Width="65" Height="22" Grid.Row="1" Click="btnShowRemoveAll_Click"/>
             <Label Content="Opcode" HorizontalAlignment="Left" Margin="5,34,0,0" VerticalAlignment="Top" Grid.Row="1" Height="26" Width="52" Grid.ColumnSpan="2"/>
             <TextBox x:Name="boxShowOpcode" HorizontalAlignment="Left" Height="23" Margin="67,40,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="60" Grid.Row="1" Grid.Column="1"/>
-            <Button x:Name="btnShowAdd" Content="Add" HorizontalAlignment="Left" Margin="132,40,0,0" VerticalAlignment="Top" Width="45" Height="22" Grid.Row="1" Grid.Column="1"/>
+            <Button x:Name="btnShowAdd" Content="Add" HorizontalAlignment="Left" Margin="132,40,0,0" VerticalAlignment="Top" Width="45" Height="22" Grid.Row="1" Grid.Column="1" Click="btnShowAdd_Click"/>
             <Label Content="Max Packets" HorizontalAlignment="Left" Margin="7,77,0,0" Grid.Row="2" VerticalAlignment="Top" Height="26" Width="75"/>
             <TextBox x:Name="boxMaxPackets" HorizontalAlignment="Left" Height="23" Margin="92,77,0,0" Grid.Row="2" TextWrapping="Wrap" Text="200" VerticalAlignment="Top" Width="40" TextChanged="boxMaxPackets_TextChanged"/>
             <Button x:Name="btnClearCapture" Content="Clear Log" Margin="7,187,0,0" Grid.Row="2" Click="btnClearCapture_Click" VerticalAlignment="Top" HorizontalAlignment="Left" Width="170" Height="23"/>
